--- a/index.html
+++ b/index.html
@@ -108,29 +108,29 @@
  <!--Main Starts-->
     <main class="main-background">
       <div class="container mx-auto mx-w-[1300px]">
-        <div class="md:flex gap-[200px] ">
-          <div class="main-left-part mx-[100px] pt-[53px] w-1/5">
-            <h2 class="primary-font font-bold text-[64px] leading-[65px] w-[600px]">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
-            <p class="secondary-font w-[572px] text-[16px] font-light  my-[28px] leading-[22px]">Browse through our diverse range of meticulously crafted garments, designed to bring out your individuality and cater to your sense of style.</p>
-            <button class="main-btn">Shop Now</button>
-            
-            <div class="flex gap-10 secondary-font border-gray-200 pt-6">
+        <div class="flex flex-col md:flex-col md:gap-8 lg:flex-row lg:gap-[220px]  ">
+          <div class="main-left-part px-3 py-5 md:mx-[100px] md:pt-[53px] md:w-1/5">
+            <h2 class="primary-font  leading-tight font-bold text-[32px] md:text-[48px]  md:font-bold  lg:text-[64px] md:leading-[65px] md:w-[600px] ">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
+            <p class="secondary-font text-[14px] md:w-[572px] text-[16px] font-light  my-[28px] leading-[22px]">Browse through our diverse range of meticulously crafted garments, designed to bring out your individuality and cater to your sense of style.</p>
+            <button class="main-btn whitespace-nowrap w-full sm:w-auto ">Shop Now</button>
+               <!-- Stats Section -->
+            <div class="flex flex-wrap  md:flex-nowrap   justify-between  md:gap-10 secondary-font border-gray-200 pt-6 ">
               <div class="text-start">
-                <h2 class="text-[40px] font-bold ">200+</h2>
+                <h2 class=" text-[25px] md:text-[40px] font-bold ">200+</h2>
                 <p class="text-sm text-gray-500 mt-2 whitespace-nowrap">International Brands</p>
               </div>
               <div class="flex items-center justify-center">
                 <div class="h-20 border-l border-2 (2px) border-gray-300"></div>
               </div>
               <div class="text-start">
-                <h2 class="text-[40px] font-bold ">2,000+</h2>
+                <h2 class="text-[25px] md:text-[40px] font-bold ">2,000+</h2>
                 <p class="text-sm text-gray-500 mt-2 whitespace-nowrap ">High-Quality Products</p>
               </div>
               <div class="flex items-center justify-center">
                 <div class="h-20 border-l border-2 (2px) border-gray-300"></div>
               </div>
               <div class="text-start">
-                <h2 class="text-[40px] font-bold ">30,000+</h2>
+                <h2 class="text-[25px] md:text-[40px] font-bold ">30,000+</h2>
                 <p class="text-sm text-gray-500 mt-2 whitespace-nowrap">Happy Customers</p>
               </div>
             </div>
@@ -150,6 +150,7 @@
         </div>
       </div>
     </main>
+   
  <!--Main Ends-->
   
 
