Added some links to github

--- a/index.html
+++ b/index.html
@@ -494,8 +494,8 @@
                 <div class=" mt-3 flex gap-4 items-center font-bold ">
                   <a href="#"><i class="bi bi-twitter-x text-2xl"></i></a>
                   <a href="#"><i class="bi bi-facebook text-2xl" ></i></a>
-                  <a href="#"><i class="bi bi-instagram text-2xl"></i></i></a>
-                  <a href="#"><i class="bi bi-github text-2xl"></i></a>
+                  <a href="https://www.instagram.com/iam.samyog/"><i class="bi bi-instagram text-2xl"></i></i></a>
+                  <a href="https://github.com/Iam-samyog"><i class="bi bi-github text-2xl"></i></a>
                 </div>
 
             </div>
