--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <main class="main-background">
       <div class="container mx-auto mx-w-[1300px]">
         <div class="flex flex-col md:flex-col md:gap-8 lg:flex-row lg:gap-[220px] main-image-display  ">
-          <div class="main-left-part  py-5 md:mx-[100px] md:pt-[53px] md:w-1/5 md:flex-wrap lg:flex-nowrap main-left  main-left-font">
+          <div class="main-left-part px-4 py-5 md:mx-[100px] md:pt-[53px] md:w-1/5 md:flex-wrap lg:flex-nowrap main-left  main-left-font">
             <h2 class="primary-font  leading-tight font-bold text-[32px] md:text-[48px]  md:font-bold  lg:text-[64px] md:leading-[65px] md:w-[600px] ">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
             <p class="secondary-font text-[14px] md:w-[572px] text-[16px] font-light  my-[28px] leading-[22px] main-left-font ">Browse through our diverse range of meticulously crafted garments, designed to bring out your individuality and cater to your sense of style.</p>
             <button class="main-btn whitespace-nowrap w-full sm:w-auto ">Shop Now</button>
@@ -138,7 +138,7 @@
           </div>
           <div class="main-right-part  w-4/5 pl-[100px] image-container">
             <div>
-            <img src="img/main.png" class="big-image w-full " alt="Main Image"/>
+            <img src="img/main.png" class="big-image w-full md:flex-wrap lg:flex-nowrap" alt="Main Image"/>
           
            
             <img src="img/star.svg" alt="Star Decor 1 " class="decor decor-1">
