Added the search menu and hamburger menu function on the nav while the web page is in responsive

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
       
         <!-- 🔹 Mobile Menu (Hidden by default) -->
-        <div id="mobileMenu" class="hidden md:hidden bg-white border-t border-gray-200">
+        <div id="mobileMenu" class=" md:hidden bg-white border-t border-gray-200">
           <a href="#" class="block py-2 px-4 text-black font-[20px]">Shop</a>
           <a href="#" class="block py-2 px-4 text-black font-[16px]">On Sale</a>
           <a href="#" class="block py-2 px-4 text-black font-[16px]">New Arrivals</a>
@@ -579,7 +579,9 @@
 
 
     <!--Javascripts -->
-    <script src="scripts.js"></script>
+    <script src="scripts.js">
+   
+    </script>
      <!--Javascripts ends -->
   </body>
 </html>
